Implementado o parsing do indice de pacotes

--- a/client-gui/pgetgui.dproj
+++ b/client-gui/pgetgui.dproj
@@ -100,7 +100,7 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="UFrmMain.pas">
-            <Form>Form1</Form>
+            <Form>frmMain</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="..\comum\UPackageManager.pas"/>
