--- a/client-cli/pgetcli.dproj
+++ b/client-cli/pgetcli.dproj
@@ -147,7 +147,7 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="..\..\Comum\UPackageManager.pas"/>
+        <DCCReference Include="..\Comum\UPackageManager.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
