--- a/client-gui/pgetgui.dproj
+++ b/client-gui/pgetgui.dproj
@@ -115,6 +115,10 @@
             <Form>dlgWait</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="UDlgInstall.pas">
+            <Form>dlgInstall</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
