--- a/client-gui/pgetgui.dproj
+++ b/client-gui/pgetgui.dproj
@@ -119,6 +119,10 @@
             <Form>dlgInstall</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="UDlgInfo.pas">
+            <Form>dlgInfo</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
